# rust-xsd

./: CONTRIBUTING.md  Cargo.toml  LICENSE-MIT  README.md
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md
src/: lib.rs
src/schema/: mod.rs  tests.rs
tests/: test1.xsd  test2.xsd  test_include.rs
